Split up upload and overview

--- a/IrmaQuicDashboard/Views/IrmaLogSession/Index.cshtml
+++ b/IrmaQuicDashboard/Views/IrmaLogSession/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Irma Log Sessions</h1>
-    <p>Upload your text files here. After uploading select the Irma log session you want to display.</p>
+    <p>After uploading select the Irma log session you want to display.</p>
 </div>
