Small UI enhancements

--- a/IrmaQuicDashboard/Views/Home/Index.cshtml
+++ b/IrmaQuicDashboard/Views/Home/Index.cshtml
@@ -6,6 +6,6 @@
     <h1 class="display-4">Welcome to the Irma-Quic Dashboard</h1>
     <p>This small web application has been developed to provide insight in the performance of QUIC in comparison to HTTP/TLS when implemented in QUIC.</p>
     <p>Logs are uploaded, processed and saved to a local database, after which you can view the processed logs in the dashboard</p>
-    <p>Go <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index">here</a> to view the Dashboard and select a log</p>
-    <p>Go <a class="nav-link text-dark" asp-area="" asp-controller="IrmaLogSessionUpload" asp-action="Index">here</a> upload a new app and server log.</p>
+    <p><a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">View Dashboard</a></p>
+    <p><a class="nav-link" asp-area="" asp-controller="IrmaLogSessionUpload" asp-action="Index">Upload new Session</a></p>
 </div>
