--- a/IrmaQuicDashboard/Views/Shared/_Layout.cshtml
+++ b/IrmaQuicDashboard/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Upload session" asp-action="Index">Privacy</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="IrmaLogSessionUpload" asp-action="Index">Upload Session</a>
                             </li>
                         </ul>
                     </div>
