--- a/IrmaQuicDashboard/Views/Shared/_Layout.cshtml
+++ b/IrmaQuicDashboard/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 
         <footer class="border-top footer text-muted">
             <div class="container">
-                &copy; 2019 - Van Slageren/De Ruijter. 
+                &copy; 2019 - Van Slageren/De Ruijter - v0.1.0
             </div>
         </footer>
 
