handle failed processing, show more averages, new server log format processing

--- a/IrmaQuicDashboard/Views/Home/Index.cshtml
+++ b/IrmaQuicDashboard/Views/Home/Index.cshtml
@@ -7,5 +7,6 @@
     <p>This small web application has been developed to provide insight in the performance of QUIC in comparison to HTTP/TLS when implemented in QUIC.</p>
     <p>Logs are uploaded, processed and saved to a local database, after which you can view the processed logs in the dashboard</p>
     <p><a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">View Dashboard</a></p>
+    <p><a class="nav-link" asp-area="" asp-controller="IrmaSession" asp-action="Index">Start Irma Session</a></p>
     <p><a class="nav-link" asp-area="" asp-controller="IrmaLogSessionUpload" asp-action="Index">Upload new Session</a></p>
 </div>
