Add more error handling, add test amount, support negative differences

--- a/IrmaQuicDashboard/Views/Shared/Error.cshtml
+++ b/IrmaQuicDashboard/Views/Shared/Error.cshtml
@@ -3,21 +3,30 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<div>
+<h1 class="text-danger">Error.</h1><br>
+<h2 class="text-danger">An error occurred while processing your request.</h2><br>
 
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        <strong>Request ID:</strong> <code>@Model.RequestId</code><br>
     </p>
 }
 
 @if (Model.ShowErrorMessage)
 {
     <p>
-        <strong>Error message:</strong> <code>@Model.ErrorMessage</code>
+        <strong>Error message:</strong> <code>@Model.ErrorMessage</code><br>
     </p>
 }
+
+@if (Model.ShowStacktrace)
+{
+    <p>
+        <strong>Stack trace:</strong> <code>@Model.Stacktrace</code><br>
+    </p>
+}
+</div>
 
 
