--- a/IrmaQuicDashboard/Views/Shared/_DashboardPartial.cshtml
+++ b/IrmaQuicDashboard/Views/Shared/_DashboardPartial.cshtml
@@ -36,6 +36,17 @@
         </div>
     }
 
+     <div>
+        <label asp-for="TestAmount"></label>
+        @Html.DisplayFor(model => model.TestAmount)
+    </div>
+
+    @if(Model.ShowErrorMessage)
+    {
+        <h3 class="text-danger">Error</h3>
+        <p>@Model.ErrorMessage</p>
+    }
+
     <table class="table">
         <tr>
             <th>SessionId</th>
