Extend UploadSession with averages and more bools

--- a/IrmaQuicDashboard/Views/IrmaLogSessionUpload/Index.cshtml
+++ b/IrmaQuicDashboard/Views/IrmaLogSessionUpload/Index.cshtml
@@ -18,6 +18,10 @@
             General location: <input asp-for="Location" /><br>
             Description: <input asp-for="Description" /><br>
             Uses QUIC?: <input asp-for="UsesQuic" /><br>
+            Is stationary?: <input asp-for="IsStationary" /><br>
+            Is WiFi?: <input asp-for="IsWiFi" /><br>
+            Is (mostly) 4G?: <input asp-for="IsMostly4G" /><br>
+            Is (mostly) 3G?: <input asp-for="IsMostly3G" /><br>
             App log: <input asp-for="AppLog" multiple /><br>
             Server log: <input asp-for="ServerLog" multiple /><br>
             <input type="submit" />
