--- a/IrmaQuicDashboard/Views/Home/Index.cshtml
+++ b/IrmaQuicDashboard/Views/Home/Index.cshtml
@@ -3,10 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to the Irma-Quic Dashboard</h1>
-    <p>This small web application has been developed to provide insight in the performance of QUIC in comparison to HTTP/TLS when implemented in QUIC.</p>
-    <p>Logs are uploaded, processed and saved to a local database, after which you can view the processed logs in the dashboard</p>
-    <p><a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">View Dashboard</a></p>
-    <p><a class="nav-link" asp-area="" asp-controller="IrmaSession" asp-action="Index">Start Irma Session</a></p>
-    <p><a class="nav-link" asp-area="" asp-controller="IrmaLogSessionUpload" asp-action="Index">Upload new Session</a></p>
+    <h1 class="display-6">Welcome to the Irma-Quic Dashboard</h1>
+    <p>This small web application has been developed to provide insight in the performance of QUIC in comparison to HTTP/TLS when implemented in QUIC. Logs are uploaded, processed and saved to a local database, after which you can view the processed logs in the dashboard</p>
+    
+    <p>In the dashboard, the results of the tests can be viewed. There is a result view per upload session, containing multiple IRMA sessions and a total result overview. </p>
+
+    <p><i>TODO explain the terms and show image</i></p>
+    <img src="https://lh3.googleusercontent.com/sTb3mybJJol8kb3-EBw89juEXNw33R_Hwg_bVy3OTL629z3DMabv9EIiAO2QZsqDm16IJHPrlpymGNtOEB0vm1oUrOYO6wbiWBxfaUNrG-ITOjAzVxVjuhy_cWZ-xx_1VwrEUqNRtEDTUUiRicGT8C8hXNNwj2cTNttYP-76o4EsJIDW68pXjuM57a8OD6O3NnOD4UUlQQv9Dw5nQTcykWHf0uqeXJ_Jiyn2G_QXHKOwI7DWdEjDzqZKFGn9RQs65yzh0nSF4TySlwfhdf_NZh0M7rRZkSNZ3YHbaVCSZe7P5FuaamuLdNWLWnIlgTFG-oPHwlexbcXyVLMfh60GPE6I0xVf099tQzMxWZBhnbfB5uUn5YPhe39jPPAl5iAVabRO2l0FbC2PkTONJOUEdL7rqmYKd7nx4aRp2DSXIksfmEr23yMw0BuHJdczsQwkUc2BRuOd8BGhk0xeey3y_iTL15alpGAbCKcB6fu7ovuziL7UWE8eESmG-8squ0FRyedPwYgqExUTdWeC63YvXoNLegbolRxGGUDYpWEcnb0d3bk-xVgSb2RMGbBRrQhLULEoC0piAGxngNAtJUvfLTA-DP_KhgYFeVoOgK-hci1uxEz1j8VyKaHx7NK0cx4V9d1caalhyHhokNVs9I6vp8qO8xVfD6jvYae6LSfUB-wdyYidlszBdBopK-gIhiNT5P2mgf35UjsLo8rB5qNDARdWH72vBjbDDUxSOYyFmCkKIqXE=w648-h864-no" />
 </div>
