--- a/IrmaQuicDashboard/wwwroot/css/site.css
+++ b/IrmaQuicDashboard/wwwroot/css/site.css
@@ -57,3 +57,9 @@ body {
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
 }
+
+/* Spacing
+-------------------------------------------------- */
+.vertical-space-medium {
+    padding-bottom: 20px;
+}
